--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemon": "^1.17.3",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pm2": "^2.10.4",
+    "request": "^2.87.0"
   }
 }
