--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.1",
     "connect-flash": "^0.1.1",
+    "connect-multiparty": "^2.1.0",
     "cookie-parser": "^1.3.5",
     "crypto": "^1.0.1",
     "ejs": "^2.3.2",
