--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "path": "^0.12.7",
     "pm2": "^2.10.4",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "sync-request": "^6.0.0"
   }
 }
