--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "ejs": "^2.3.2",
     "express": "^4.13.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.11.3",
     "morgan": "^1.6.0",
     "mysql": "^2.7.0",
