--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.0",
     "express-flash": "0.0.2",
     "express-session": "^1.11.3",
+    "moment": "^2.22.2",
     "morgan": "^1.6.0",
     "mysql": "^2.7.0",
     "nodemailer": "^4.6.4",
